# freedom-tape

./: Cargo.toml  readme.md
freedom-tape/: Cargo.toml
freedom-tape/src/: lib.rs  macros.rs  main.rs
godot/: FreedomTape.gdextension
godot/.godot/: FreedomTape.gdextension
scripts/: editor.sh  run.sh
