[package]
name = "freedom-tape"
version = "0.1.0"
edition = "2021"
authors = [
  "Jeffrey McAteer <jeffrey@jmcateer.com>"
]


[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]


[dependencies.bevy]
version = "0.12"
features = [
  "wayland",
  "dynamic_linking"
]

