[package]
name = "freedom-tape"
version = "0.1.0"
edition = "2021"
authors = [
  "Jeffrey McAteer <jeffrey@jmcateer.com>"
]

[lib]
crate-type = ["cdylib"]


[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
swayipc = "3.0"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }



